# Fit-Stream

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/core/: SensorSample.h  Types.h
src/ingestion/: ISensorStream.h  SyntheticStream.cpp  SyntheticStream.h
src/normalization/: NormalizationPipeline.cpp  NormalizationPipeline.h  Normalizer.cpp  Normalizer.h
